objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Finance</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>HR</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sample_field__c</fullName>
        <label>Sample field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tutorial_sample__c</fullName>
        <label>Tutorial sample</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tutorial_01__c</fullName>
        <label>tutorial 01</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>FINANCE</fullName>
        <active>true</active>
        <businessProcess>Finance</businessProcess>
        <label>FINANCE</label>
    </recordTypes>
    <recordTypes>
        <fullName>HR</fullName>
        <active>true</active>
        <businessProcess>HR</businessProcess>
        <label>HR</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>CASE_DESCRIPTION_IS_NOT_BLANK</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(Description)</errorConditionFormula>
        <errorDisplayField>Description</errorDisplayField>
        <errorMessage>DESCRIPTION CANNOT BE NULL</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>case_origin_is_not_protals</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Origin  , &apos;PORTAL&apos;)</errorConditionFormula>
        <errorDisplayField>Origin</errorDisplayField>
        <errorMessage>You cannot have case origin as Portal</errorMessage>
    </validationRules>
</CustomObject>